--- a/firethelaser2/app/src/main/res/values/strings.xml
+++ b/firethelaser2/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="previous">Previous</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+    <string name="calibrating">Point to the Center of the screen</string>
 </resources>
