--- a/firethelaser2/app/src/main/res/values/strings.xml
+++ b/firethelaser2/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="app_name">firethelaser2</string>
     <string name="helloworld">Hello World!</string>
-    <string name="toggle">Toggle Laser</string>
-    <string name="next">Next</string>
+    <string name="toggle">Click</string>
+    <string name="next">Color Change</string>
     <string name="previous">Previous</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
